# Machine-Learning-for-Tigress-Test

./: .tigress-test-config  README.md  tt_fail_kmeans.ipynb  tt_process.py
ml4tt/: json_to_csv.py  kmodes.py  ml4tt_kmodes.py
ml4tt/ml4tt/: ml4tt.py
ml4tt/module/: ml4tt.py
src/: json_to_csv.py  ml4tt.py  ml4tt_kmodes.py
tigress_test/c-code/: transformation_description.json
tigress_test/c-code/c_source/: full_test_arg.c  full_test_arg_and_input.c  full_test_inp.c  sleep.c  test_input_or_arg.c  tigress.h
tigress_test/tigress-scripts/documentation/: tigress_adhoc_help_text.txt  tigress_run_help_text.txt
tigress_test/tigress-scripts/my-scripts/: adhoc-command.txt  zach_tigress_test_v1.json
tigress_test/tigress-scripts/stock-tigress-scripts/: .tigress-test-config  README  dune  script_02.json  script_db.json  script_db_one_source_file.json  script_db_simple_1_of_2.json  script_db_simple_2_of_2.json  script_db_simple_call.json  script_db_simple_flatten.json  script_ident_test.json  script_test_input_and_args_glob_with_failures2.json  script_test_timeout.json  testcases_02.json  zachscript.json
tigress_test/tigress-test-output/documentation/: results_file_help_text.txt
tigress_test_resources/: Tigress_test_documentation.md
tigress_test_resources/c-code/: source_description.json
tigress_test_resources/c-code/c_simple_source/: header.h
tigress_test_resources/c-code/c_source/: test1.c  test_arg.c  test_arg_and_input.c  test_input.c  test_input_or_arg.h
tigress_test_resources/tigress-scripts/my-scripts/: simple_c_1.json
(+1641 files in other folders)
